2005-06-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/result.py (Result.NoteException): Quote exception
	string. 

	* qm/extension.py (Extension.Type.__init__): Fix overlong lines.
	(make_dom_element): Fix typo in comment.

2005-06-06  Stefan Seefeld  <stefan@codesourcery.com>

	* setup.py: Move data into <prefix>/share/qm.
	* qm/__init__.py: Likewise.
	* qmdist/command/install_data.py: Likewise.
	* MANIFEST.in: Cleanup.
	* Makefile: Removed.
	* configure: Removed.
	* configure.in: Removed.
	* qm/test/classes/compiler.py: Bugfix and cleanup.

2005-06-01  Mark Mitchell  <mark@codesourcery.com>

        Test documentation generation again.

2005-05-31  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/report.py: Support expectation files.
	* qm/test/cmdline.py: Factor out global database
	and targets objects to...
	* qm/test/test.py: ...here.
	* qm/test/database.py: ...and here.
	* qm/test/context.py: Add TARGET_CONTEXT_PROPERTY.
	* qm/test/target.py: Define it.
	* qm/test/classes/command.py: Use unicode context variables
	when setting up environment, but only when convertible to str.

2005-05-18  Zack Weinberg  <zack@codesourcery.com>

	* qm/test/database.py (ItemDescriptor._Execute): Use getattr
	and a bound method object instead of eval.

2005-05-03  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/report.py: Add ReportGenerator module.
	* qm/test/cmdline.py: Add 'report' command.

2005-04-15  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler.py: Add support for new 'ldflags' parameter.
	* qm/test/classes/compiler_table.py: Likewise.

2005-04-14  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler.py: Moved over extension from qmtc.
	* qm/test/classes/compiler_table.py: Likewise.
	* qm/test/classes/compiler_test.py: Likewise.
	* qm/test/classes/classes.qmc: Registered 'CompilerTable' resource.

2005-03-31  Stefan Seefeld  <stefan@codesourcery.com>
